# Test-Suite-Example

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
documentation/: documentation.txt
new_users/: new_user.txt
pom/: .env  .gitignore  conftest.py  test_file.py  test_suite.py
pom/pages/: base_page.py  form_authentication.py  home.py  home_validator.py  nav_bar.py  new_customer.py  new_user_form.py
pom/pages/helpers/: .gitignore  file_reader.py  file_writer.py  name_generator.py
